<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/map_pin"
            android:title="@string/map" />

        <item
            android:id="@+id/myNotesFragment"
            android:icon="@drawable/my_notes"
            android:title="@string/my_notes" />
        <item
            android:id="@+id/editUserFragment"
            android:icon="@drawable/update_user"
            android:title="@string/details" />

    </group>
    <item
    android:title="">
    <menu>
        <item
            android:id="@+id/logoutFragment"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"
            />
    </menu>
    </item>
</menu>