<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapsFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.advizors.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.advizors.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.advizors.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.advizors.maps.MapsFragment"
        android:label="MapsFragment" >
        <action
            android:id="@+id/action_mapsFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
        <action
            android:id="@+id/action_mapsFragment_to_viewNoteFragment"
            app:destination="@id/viewNoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.example.advizors.AddNoteFragment"
        android:label="AddNoteFragment">
    <argument
        android:name="latitude"
        app:argType="float" />
    <argument
        android:name="longitude"
        app:argType="float" />
    <argument
        android:name="userId"
        app:argType="string"
        android:defaultValue="0" />
    <argument
        android:name="content"
        app:argType="string"
        android:defaultValue="Fill description here" />
    <argument
        android:name="noteId"
        app:argType="string"
        android:defaultValue="0" />
    <argument
        android:name="note"
        app:argType="com.example.advizors.models.note.Note"
        app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/viewNoteFragment"
        android:name="com.example.advizors.ViewNoteFragment"
        android:label="ViewNoteFragment" >
        <action
            android:id="@+id/action_viewNoteFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
        <argument
            android:name="noteId"
            app:argType="string" />
    </fragment>
</navigation>